5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4006/executions/1616_2922.log
== TEST (2019-04-01 14:35:24) 
-- CODE:
from math inport*
var1= floant(input("qf/qo**(1/t)-1"))
print(var1)
-- ERROR:
File "XXXX", line 1
    from math inport*
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:35:41) 
-- CODE:

var1= float(input("qf/qo**(1/t)-1"))
print(var1)
-- OUTPUT:
90.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:35:57) 
-- CODE:

var1= float(input("qf/qo**(1/t)-1"))
print(var1)
-- OUTPUT:
90.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:36:59) 
-- CODE:

var1= float(input("qf/qo**(1/t)-1"))
print(round("var1,5"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round("var1,5"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:37:20) 
-- CODE:

var1= float(input("qf/qo**(1/t)-1"))
print(round("var1,5"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round("var1,5"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:38:26) 
-- CODE:

var1= float(input("qf/qo**(1/t)-1"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round("var1,5"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:38:32) 
-- CODE:

var1= float(input("qf/qo**(1/t)-1"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round("var1,5"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
